--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -1,11 +1,15 @@
-header {
-    background: white;
-    height: 70px;
-    width: 100%;
-    border-bottom: 1px solid #CCCCCC;
+/* File: web_dynamic/static/styles/3-header.css */
+
+#api_status {
+    float: right;
+    width: 40px;
+    height: 40px;
+    background-color: #cccccc;
+    border-radius: 50%;
+    margin-right: 30px;
+    margin-top: 10px;
 }
-header .logo {
-    background: url("../images/logo.png") no-repeat;
-    left: 20px;
-    height: 100%;
+
+.available {
+    background-color: #ff545f;
 }
