--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -13,3 +13,19 @@
 .available {
     background-color: #ff545f;
 }
+
+/* Add this to 3-header.css */
+#api_status {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background-color: #cccccc;
+  border-radius: 50%;
+  vertical-align: middle;
+  margin-left: auto;
+  margin-right: 30px;
+}
+
+.available {
+  background-color: #ff545f;
+}
